Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Opportunity_Swarm_Rule__c.object
<CustomObject>
    <description>A rule indicating what users should auto-follow an Opportunity in Chatter.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_on_Swarm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You will receive a Chatter message if you automatically follow a record.</inlineHelpText>
        <label>Notify on Swarm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Opportunities for Accounts I Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Opportunities above a certain amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Opportunities that reach a certain stage in the sales process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Opportunities of a certain Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Swarm_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Swarm Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSR-{0000}</displayFormat>
        <label>Opportunity Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>